	* expmed.c (expand_mult): Initialize coeff and is_neg.

java/ChangeLog:

	* jcf-io.c (read_zip_member): Initialize d_stream.

fortran/ChangLog:

	PR fortran/53449
	* parse.c (gfc_parse_file): Initialize errors_before.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@189281 138bc75d-0d04-0410-961f-82ee72b054a4